# go1_navigation

./: .gitignore  .gitmodules  Dockerfile  README.md
scripts/: build.bash  kill_node.bash  start.bash  start_mid360.bash  test_lidar.bash  test_lidar_mid360.bash
src/Point-LIO/: README.md
src/Point-LIO/config/: mid360.yaml
src/Point-LIO/launch/: mapping_mid360.launch
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/launch/: camera_startup.launch  camera_startup_view.launch
src/carto_mapping/config/: box_filter.yaml  demo_2d.rviz  global_costmap_params.yaml  local_costmap_params.yaml  pointcloud_to_laserscan.yaml
src/go1_navigation/: CMakeLists.txt  package.xml
src/go1_navigation/launch/: navigation.launch  navigation_without_map.launch
src/go1_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/go1_navigation/params_without_map/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/l1_mapping/: CMakeLists.txt  package.xml
src/l1_mapping/config/: base_local_planner_params.yaml  costmap_common_params.yaml  demo_2d.rviz  demo_2d_movebase.rviz  global_costmap_params.yaml  l1.lua  local_costmap_params.yaml
src/l1_mapping/launch/: carto_L1.launch  carto_movebase_L1.launch
src/livox_ros_driver2/config/: MID360_config.json
src/point_lio_unilidar/: CMakeLists.txt  package.xml
unitree_lidar_ros/catkin_point_lio_unilidar/: cloud_registered.out  cloud_registered.out2
(+54 files in other folders)
